fix padding issues for the first block and sync carousel-column horizontal whitespace

--- a/src/containers/PageBuilder/BlockBuilder/BlockDefault/BlockDefault.module.css
+++ b/src/containers/PageBuilder/BlockBuilder/BlockDefault/BlockDefault.module.css
@@ -12,7 +12,8 @@
     display: none;
   }
 
-  & + .text {
+  /* If there's an image, add margin-top to the following text div */
+  &:not(:empty) + .text {
     margin-top: 20px;
   }
 }
